реализован функционал удаления фильмов в связанной таблице

--- a/client/src/layouts/dashboard/Postgres-tables/tables.css
+++ b/client/src/layouts/dashboard/Postgres-tables/tables.css
@@ -3,7 +3,7 @@
 .directors-table {
   height: 60vh; 
   width: 100%; 
-  max-width: 80%; 
+  max-width: 100%; 
 }
 
 .ag-theme-alpine .ag-cell {
@@ -13,4 +13,10 @@
 .ag-theme-alpine .ag-header-cell {
 
   font-size: 11px;
+}
+
+.movies-table{
+  height: 60vh;
+  width: 100%;
+  max-width: 100%;
 }
